# samgovsearch

./: .gitignore  BROWSER_MODE.md  FILTER_SYNTAX.md  INITIAL_SEARCH_MATCHING.md  README.md  TAMPERMONKEY_ZIP_CAPTURE.md  index.html  requirements-website-download.txt  requirements.txt  run_samgovsearch.bat  run_samgovsearch_browser.bat  samgov_api_cache.py  samgov_sqlite_index.py  samgovsearch.py  samgovsearch_all_status.py  samgovsearch_app.py  samgovsearch_browser.py  samgovsearch_browser_hybrid.py  samgovsearch_browser_hybrid_cached.py  samgovsearch_cached.py  samgovsearch_filter_cache.py  samgovsearch_pro.py  samgovsearch_pro_attachment_filter_live.py  samgovsearch_pro_checkbox_field_states.py  samgovsearch_pro_checkbox_grouped.py  samgovsearch_pro_download_folder.py  samgovsearch_pro_exclusions.py  samgovsearch_pro_final.py  samgovsearch_pro_initial_match.py  samgovsearch_pro_initial_match_toggle.py  samgovsearch_pro_naics_q_filter.py  samgovsearch_pro_naics_validated.py  samgovsearch_pro_predefined_naics.py  samgovsearch_pro_predefined_naics_fixed.py  samgovsearch_pro_search_help.py  samgovsearch_pro_title_result_filter.py  samgovsearch_pro_zip_fast.py  samgovsearch_responsive.py  samgovsearch_unified.py  wrangler.jsonc
arrow/: MANIFEST.in  README.md  pyproject.toml  requirements.txt
arrow/arrow/: __init__.py  __main__.py  analysis.py  archive_store.py  bulk_csv.py  bulk_download.py  canonical.py  company_profile.py  db.py  env.py  ipv4_preference.py  normalize.py  ollama_client.py  ollama_runtime.py  ranking.py  repl.py  repo.py  sync_engine.py  tui.py
(+15 files in other folders)
